--- a/app/src/main/resources/site/parts/hero/hero.html
+++ b/app/src/main/resources/site/parts/hero/hero.html
@@ -1,7 +1,7 @@
 <div class="kosticonnect-hero">
     <div class="hero_banner kmg-hero-banner">
         <div class="hero_banner-video_wrap">
-            <img data-th-src="${background}" class="hero_banner-video  banner-img" alt="">
+            <img data-th-src="${background.url}" class="hero_banner-video  banner-img" alt="">
 
         </div>
         <div class="hero_banner-content">
