fixes to frontend

--- a/app/src/main/resources/site/parts/footerInfo/footerInfo.html
+++ b/app/src/main/resources/site/parts/footerInfo/footerInfo.html
@@ -18,7 +18,7 @@
 <div class="b-promo_block m-white m-indent_less" data-th-classappend="${mirrored ? '' : ' m-reverse'}">
     <div class="b-promo_block-holder">
         <div class=" js_attend-block b-promo_block-container">
-            <div class="b-promo_block-content">
+            <div class="b-promo_block-content b-text_block">
                 <div data-th-remove="tag" data-th-utext="${blockTwo.info}"></div>
                 <div class="b-promo_block-actions">
                     <a target="_blank" data-th-each="link : ${blockTwo.links}" data-th-href="${link.url}"
