--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -84,6 +84,7 @@
                 </div>
             </div>
             <div class="k_gdp-sign_up">
+                <!--
                 <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1">
                     <h5 data-th-unless="${user}" class="k_gdp-sign_up-subtitle">
                         Для записи на игру вам необходимо <a class="js_login-required k_gdp-sign_up-cta">Войти</a>, или
@@ -100,13 +101,13 @@
                         <input class="js_get-user-data" name="phone" placeholder="Номер телефона" required>
                     </div>
                 </form>
+                -->
                 <div class="k_gdp-signed js_signout-block" data-th-classappend="${gameSigned ? '' : 'hidden'}">
                     <div class="k_games-time_title">Вы уже записаны на эту игру.</div>
                     <button class="kosticonnect-button primary k_gdp-sign_out-btn js_sign-out-of-game">
                         ОТПИСАТЬСЯ ОТ ИГРЫ
                     </button>
-                    <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow"
-                        href="https://www.kostirpg.com/kosticon-mini/igry">
+                    <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
                         <span>
                             Назад к списку
                         </span>
@@ -119,8 +120,7 @@
                         ИГРУ</button>
                     <div data-th-unless="${spaceAvailable}" class="k_games-time_title">Мест больше нет.
                     </div>
-                    <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow"
-                        href="https://www.kostirpg.com/kosticon-mini/igry">
+                    <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
                         <span>
                             Назад к списку
                         </span>
@@ -130,7 +130,7 @@
         </div>
     </main>
     <div class="snackbar js_snackbar">
-        <div class="snackbar-text">Some msg</div>
+        <div class="snackbar-text"></div>
         <div class="snackbar-close icon-delete js_snackbar-close"></div>
     </div>
     <footer class="footer" data-th-remove="tag" data-th-utext="${pageComponents.footer}"></footer>
