--- a/app/src/main/resources/site/pages/landing/landing.html
+++ b/app/src/main/resources/site/pages/landing/landing.html
@@ -4,19 +4,7 @@
 <head data-th-utext="${pageComponents.pagehead}"></head>
 
 <body class="kosticonnect-page landingPage">
-    <header class="kosticonnect-header">
-        <div class="site_content">
-            <div class="kosticonnect-header_inner">
-                <div class="kosticonnect-short_info">
-                    <a href="/kostyashki-moskva">
-                        <div class="kosticonnect-headline">
-                            <img data-th-src="${cityLogo.url}" alt="kosticonnect " />
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </header>
+    <div data-th-remove="tag" data-th-utext="${pageComponents.festivalHeader}"></div>
     <main class="kosticonnect-wrap" data-portal-region="main">
         <div data-th-if="${mainRegion}" data-th-remove="tag">
             <div data-th-each="component : ${mainRegion.components}" data-th-remove="tag">
