--- a/app/src/main/resources/site/pages/games/gamesBlock.html
+++ b/app/src/main/resources/site/pages/games/gamesBlock.html
@@ -54,7 +54,7 @@
                 <span class="k_games-link_more" data-th-href="${game.processed.url}">Узнать больше</span>
             </span>
 
-            <div class="k_games-item_actions" data-th-if="${user and user.data.roles.moderator}">
+            <div class="k_games-item_actions" data-th-if="${cityBoss}">
                 <button class="kosticonnect-button primary js_modal-show js_game-players-list"
                     data-th-attr="data-gameId=${game.content._id}"> Список игроков</button>
                 <button class="kosticonnect-button inverted js_modal-show js_game-add-player"
