--- a/app/src/main/resources/site/pages/mails/orderCreated.html
+++ b/app/src/main/resources/site/pages/mails/orderCreated.html
@@ -37,7 +37,7 @@
                             </div>
                             <div>
                                 <span style="color: #707070; font-weight: bold;">Количество:</span>
-                                <span style="color: #505050;" data-th-text="${item.amount}">1</span>
+                                <span style="color: #505050;" data-th-text="${item.amountString}">1</span>
                             </div>
                             <div data-th-if="${item.itemsIds}">
                                 <span style="color: #707070; font-weight: bold;">Коды, которые позволят вам попасть на
