--- a/app/src/main/resources/site/parts/footerInfo/footerInfo.html
+++ b/app/src/main/resources/site/parts/footerInfo/footerInfo.html
@@ -8,7 +8,7 @@
                 <div data-th-remove="tag" data-th-utext="${blockOne.info}"></div>
                 <div class="b-promo_block-actions">
                     <a target="_blank" data-th-each="link : ${blockOne.links}" data-th-href="${link.url}"
-                        class="hero_banner-tickets kosticonnect-button primary" data-th-text="${link.title}">
+                        class="hero_banner-tickets b-meet_up-button m-primary" data-th-text="${link.title}">
                     </a>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                 <div data-th-remove="tag" data-th-utext="${blockTwo.info}"></div>
                 <div class="b-promo_block-actions">
                     <a target="_blank" data-th-each="link : ${blockTwo.links}" data-th-href="${link.url}"
-                        class="hero_banner-tickets kosticonnect-button primary" data-th-text="${link.title}">
+                        class="hero_banner-tickets b-meet_up-button m-primary" data-th-text="${link.title}">
                     </a>
                 </div>
             </div>
@@ -35,7 +35,7 @@
         <div class="b-promo_block-container">
             <div class="b-promo_block-content">
                 <h2 class="kosticonnect-title">ТЕЛЕГРАМ-ЧАТ МИТАПА</h2>
-                <a data-th-href="${blockThree.url}" class="kosticonnect-button primary">ПРИСОЕДИНИТЬСЯ</a>
+                <a data-th-href="${blockThree.url}" class="b-meet_up-button m-primary">ПРИСОЕДИНИТЬСЯ</a>
             </div>
         </div>
     </div>
