--- a/app/src/main/resources/site/parts/hero/hero.html
+++ b/app/src/main/resources/site/parts/hero/hero.html
@@ -11,11 +11,10 @@
                 </h2>
                 <div class="hero_banner-actions" data-th-if="${links}">
                     <a target="_blank" data-th-each="link : ${links}" data-th-href="${link.url}"
-                        class="hero_banner-tickets kosticonnect-button primary" data-th-text="${link.title}">
+                        class="hero_banner-tickets b-meet_up-button m-primary" data-th-text="${link.title}">
                     </a>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
