Kosticonnect heroo image update

--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -43,11 +43,14 @@
             <div class="site_content">
                 <div class="hero_banner m-kostirpg">
                     <div class="hero_banner-video_wrap">
-                        <video autoplay muted loop class="hero_banner-video">
+                        <!-- <video autoplay muted loop class="hero_banner-video">
                             <source
                                 data-th-src="${portal.assetUrl({'_path=images/kosticonnect/kosticonnect_video.mp4'})}"
                                 type="video/mp4">
-                        </video>
+                        </video> -->
+                        
+                        <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/kosticonnect_hero.jpg'})}"
+                        alt="Kosticonnect2022">
                     </div>
                     <div class="hero_banner-content">
                         <h2 class="hero_banner-title kosticonnect-title">
