--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -307,11 +307,11 @@
                             разрабатываете? Прочесть лекцию? Провести воркшоп? Презентовать свой продукт или бизнес? Мы
                             всегда рады новым участникам!</p>
                         <div class="attend-actions">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfUHAABktwfXK5Bk21ALbWcWUT91VZYgzVfwH3mAyGmc2vnXw/viewform"
+                            <a href="https://forms.gle/pmdFztZwPnEzZLsD8"
                                 target="_blank" class="attend-masters kosticonnect-button primary">ВЕДУЩИЕ</a>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdBY6eZ-WusdUEnkhQkVRvDu_gl7GBRHNdcJijItbt1Z2UHHA/viewform"
+                            <a href="https://forms.gle/RcTe9oH1vJcdseAFA"
                                 target="_blank" class="attend-participants kosticonnect-button primary">УЧАСТНИКИ</a>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc4hAgYHxz-fTb0c7yPG-_jy5SqtqI7oz0QWdsSqI312Xw38Q/viewform"
+                            <a href="https://forms.gle/bw1xxykauo5h2w2i9"
                                 target="_blank" class="attend-media kosticonnect-button primary">СМИ</a>
                         </div>
                     </div>
