handy 'me' link

--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -48,9 +48,9 @@
                                 data-th-src="${portal.assetUrl({'_path=images/kosticonnect/kosticonnect_video.mp4'})}"
                                 type="video/mp4">
                         </video> -->
-                        
+
                         <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/kosticonnect_hero.jpg'})}"
-                        alt="Kosticonnect2022">
+                            alt="Kosticonnect2022">
                     </div>
                     <div class="hero_banner-content">
                         <h2 class="hero_banner-title kosticonnect-title">
@@ -221,7 +221,7 @@
                     <ul class="shop_block-list">
                         <!-- use "sold-out" class on <li> item if ticket is sold out -->
                         <li class="shop_block-item"
-                            data-th-classappend="${product.data.ticketType == 'kostiConnectOnline'} ? 'regular' : 'turbo'"
+                            data-th-classappend="|${product.data.ticketType == 'kostiConnectOnline' ? 'regular' : 'turbo'} ${product.data.inventory < 1 ? ' sold-out' : ''}|"
                             data-th-each="product: ${products}">
                             <div class="shop_block-item-inner">
                                 <div class="shop_block-img_wrap">
@@ -248,9 +248,9 @@
                                     </a>
                                 </div>
                             </div>
-                            <!-- <div class="shop_block-msg_wrap">
+                            <div class="shop_block-msg_wrap" data-th-if="${product.data.inventory < 1}">
                                 <span class="shop_block-msg">SOLD OUT!</span>
-                            </div>-->
+                            </div>
                         </li>
                         <li class="shop_block-item shop_block-support">
                             Подключайся к самой крутой настольной ролевой движухе этого года. Добро пожаловать в
@@ -307,12 +307,12 @@
                             разрабатываете? Прочесть лекцию? Провести воркшоп? Презентовать свой продукт или бизнес? Мы
                             всегда рады новым участникам!</p>
                         <div class="attend-actions">
-                            <a href="https://forms.gle/pmdFztZwPnEzZLsD8"
-                                target="_blank" class="attend-masters kosticonnect-button primary">ВЕДУЩИЕ</a>
-                            <a href="https://forms.gle/RcTe9oH1vJcdseAFA"
-                                target="_blank" class="attend-participants kosticonnect-button primary">УЧАСТНИКИ</a>
-                            <a href="https://forms.gle/bw1xxykauo5h2w2i9"
-                                target="_blank" class="attend-media kosticonnect-button primary">СМИ</a>
+                            <a href="https://forms.gle/pmdFztZwPnEzZLsD8" target="_blank"
+                                class="attend-masters kosticonnect-button primary">ВЕДУЩИЕ</a>
+                            <a href="https://forms.gle/RcTe9oH1vJcdseAFA" target="_blank"
+                                class="attend-participants kosticonnect-button primary">УЧАСТНИКИ</a>
+                            <a href="https://forms.gle/bw1xxykauo5h2w2i9" target="_blank"
+                                class="attend-media kosticonnect-button primary">СМИ</a>
                         </div>
                     </div>
                 </div>
