Update games block

--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -154,59 +154,86 @@
                         ФЕСТИВАЛЯ!
                     </h2>
                 </div>
-            </div>
+            </div> -->
             <div class="site_content">
                 <div class="games">
                     <h2 class="games-title kosticonnect-title">МНОЖЕСТВО ИГР</h2>
                     <ul class="games-list">
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_dnd.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_enoa.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_kavalery.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_skelets.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_yky.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_h0.png'})}"
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_fate.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_gurps.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_cp2020.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_coc.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_pbta.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_WFRP.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_blades.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect  festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_warhammer.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_dcc.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
                         </li>
                         <li class="games-item">
                             <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_savage.png'})}"
-                                alt="kosticonnect backstage img">
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/w_vampire.png'})}"
+                                alt="kosticonnect festival game systems">
+                        </li>
+                        <li class="games-item m-text">
+                            и многие другие...
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="fest_program">
+             <!-- <div class="fest_program">
                 <div class="site_content">
                     <h2 class="fest_program-title">
                         <a target="_blank" href="/kosticonnect/games" class="link">ЗАПИШИСЬ</a> НА ИГРУ!
